# msys2-cpp-template

./: .clang-format  .clangd  CMakeLists.txt  README.md
cmake/: Strict.cmake
src/: CMakeLists.txt
src/app/proj2/: CMakeLists.txt
src/app/testProj/: CMakeLists.txt  testProj.cpp
src/include/: testLib.h
src/lib/: CMakeLists.txt  testLib.cpp
src/tests/: CMakeLists.txt
src/tests/testLib/: testLibTests.cpp
